<resources>
    <string name="app_name">Open Golf</string>
    <string name="desc_no_results">No Results</string>
    <string name="near_me">Near Me (Beta)</string>
    <string name="my_courses">My Courses</string>
    <string name="free_roam">Free Roam</string>
    <string name="searchHint">Search (Beta)</string>
    <string name="nicknameHint">Optional: North, Highlands</string>
    <string name="createCourse">Create New Course Definition</string>
    <string name="sample">sample</string>
    <string name="sampleNum">18</string>
</resources>
